AFA registration added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <title>Success normal delivery calculator</title>
+    <title>Success big-agent calculator</title>
   </head>
   <body>
     <div id="root"></div>
